@@ -145,12 +145,9 @@ public class Http2SolrClient extends HttpSolrClientBase {
     assert ObjectReleaseTracker.track(this);
   }
 
+  @Deprecated(since = "9.7")
   public void addListenerFactory(HttpListenerFactory factory) {
     this.listenerFactory.add(factory);
-  }
-
-  public List<HttpListenerFactory> getListenerFactory() {
-    return listenerFactory;
   }
 
   // internal usage only
@@ -851,11 +848,6 @@ public class Http2SolrClient extends HttpSolrClientBase {
 
     protected Long keyStoreReloadIntervalSecs;
 
-    public Http2SolrClient.Builder withListenerFactory(List<HttpListenerFactory> listenerFactory) {
-      this.listenerFactory = listenerFactory;
-      return this;
-    }
-
     private List<HttpListenerFactory> listenerFactory;
 
     public Builder() {
@@ -880,6 +872,11 @@ public class Http2SolrClient extends HttpSolrClientBase {
     public Builder(String baseSolrUrl) {
       super();
       this.baseSolrUrl = baseSolrUrl;
+    }
+
+    public Http2SolrClient.Builder withListenerFactory(List<HttpListenerFactory> listenerFactory) {
+      this.listenerFactory = listenerFactory;
+      return this;
     }
 
     public HttpSolrClientBuilderBase<Http2SolrClient.Builder, Http2SolrClient> withSSLConfig(
@@ -1053,6 +1050,10 @@ public class Http2SolrClient extends HttpSolrClientBase {
       }
       if (this.urlParamNames == null) {
         this.urlParamNames = http2SolrClient.urlParamNames;
+      }
+      if (this.listenerFactory == null) {
+        this.listenerFactory = new ArrayList<HttpListenerFactory>();
+        http2SolrClient.listenerFactory.forEach(this.listenerFactory::add);
       }
       return this;
     }
